# xlreg_c

./: .gitignore  .gitignore.local  CHANGES  Makefile  Makefile.am  README.md  TODO  bkp2U  configure  configure.ac  countem  generate.gh-pages  in.the.beginning  index.html  index.md  installit  p.pb-c.c  p.pb-c.h  styleit  test.all  update.gh-pages  wscript
.dvcz/: builds  lastBuildList  projCfg  projCfg.local  version
doc/: index.md
ghpDoc/: index.md
include/: p.pb-c.h
src/: DecimalVersion.h  Makefile.am  main.c  p.pb-c.c  version.c  xlReg.h  xlreg.c  xlreg.h  xlreg_errors.h
tests/: Makefile.am  check_xlreg.c
