## Process this file with automake to produce Makefile.in

ACLOCAL_AMFLAGS = -I m4
bin_PROGRAMS 	= xlRegClient
xlRegClient_SOURCES = version.c xlreg_client.c # xlreg.c

# TESTS = check_xlreg
# check_PROGRAMS = check_xlreg
# check_xlreg_SOURCES = check_xlreg.c ${top_builddir}/src/xlReg.h
# check_xlreg_CFLAGS = @CHECK_CFLAGS@
# check_xlreg_LDADD = $(top_builddir}/src/libxlreg_C.la @CHECK_LIBS@
